[package]
name = "ncss_sort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", optional = true }
ureq = { version = "2.6", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
percent-encoding = { version = "2.2", optional = true }

[features]
default = []
net = ["dep:ureq", "dep:serde", "dep:percent-encoding"]
rand = ["dep:rand"]